--- a/example/another.html
+++ b/example/another.html
@@ -4,41 +4,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>other页面</title>
   <style>
-    /* .layout1 {
+    .layout1 {
       height: 300px;
       width: 300px;
       border: 1px solid red;
-    } */
+    }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/enhance-eventbus@1.0.1/dist/enhance-eventbus.umd.js"></script>
 </head>
 
 <body>
 
   <div class="layout1">
-    <h2>这是 iframe 区域</h2>
-    <button id="btn">to global</button>
+    <h2>这是 other 页面</h2>
+    <button id="btn">to index</button>
     <div class="content"></div>
   </div>
-  <script src="./tabeventbus.umd.js"></script>
 
   <script>
 
-    const eventBus = new tabeventbus.StorageEventBus({
-      originWhiteList: ['http://192.168.2.37:9999', 'http://192.168.2.37:8888']
-    })
+    const eventBus = new enhanceEventbus.StorageEventBus()
     const content = document.querySelector('.content');
 
-    eventBus.on('toIframe', ([data]) => {
+    eventBus.on('toOther', (data) => {
       console.log(data);
       content.innerHTML = data.payload
     })
 
 
     document.querySelector('#btn').addEventListener('click', () => {
-      eventBus.emit('toGlobal', {
-        msg: 'success', payload: '这是来自 iframe 的消息' + Date.now()
+      eventBus.emit('toIndex', {
+        msg: 'success', payload: '这是来自 index页面 的消息' + Date.now()
       })
     })
   </script>
