--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>index页面</title>
+  <script src="https://cdn.jsdelivr.net/npm/enhance-eventbus@1.0.1/dist/enhance-eventbus.umd.js"></script>
+
   <style>
     .layout {
       height: 300px;
@@ -12,11 +14,16 @@
       border: 1px solid #000;
     }
 
-    .iframe {
+    .button {
+      padding: 5px 10px;
+      display: inline-block;
+      text-decoration: none;
+      color: #000;
+      background: #efefef;
+      border-radius: 4px;
+      font-size: 14px;
       margin-top: 20px;
-      width: 300px;
-      height: 300px;
-      border: 1px solid red;
+
     }
   </style>
 </head>
@@ -24,35 +31,27 @@
 <body>
 
   <div class="layout">
-    <h2>这是 global 区域</h2>
-    <button id="btn">to iframe</button>
+    <h2>这是 index 页面</h2>
+    <button id="btn">send msg to other</button>
     <div class="content"></div>
   </div>
 
-
-
-
-  <iframe class="iframe" src="./another.html" frameborder="0"></iframe>
-
-
-  <script src="./tabeventbus.umd.js"></script>
-
+  <div>
+    <a class="button" href="/another.html" target="_blank">打开 other 页面</a>
+  </div>
 
   <script>
 
-    const eventBus = new tabeventbus.StorageEventBus({
-      originWhiteList: ['http://192.168.2.37:9999', 'http://192.168.2.37:8888']
-
-    })
+    const eventBus = new enhanceEventbus.StorageEventBus()
     const content = document.querySelector('.content');
 
-    eventBus.on('toGlobal', ([data]) => {
+    eventBus.on('toIndex', (data) => {
 
       content.innerHTML = data.payload
     })
 
     document.querySelector('#btn').addEventListener('click', () => {
-      eventBus.emit('toIframe', { msg: 'success', payload: '这是来自 global 的消息' + Date.now() })
+      eventBus.emit('toOther', { msg: 'success', payload: '这是来自 other页面 的消息' + Date.now() })
     })
 
   </script>
